--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,11 @@
         android:gravity="center"
         android:text="@string/form_activity" />
 
+    <Button
+        android:id="@+id/buttonFormJava"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/form_java_activity" />
+
 </LinearLayout>
