--- a/app/src/main/res/layout/activity_form_result.xml
+++ b/app/src/main/res/layout/activity_form_result.xml
@@ -30,7 +30,7 @@
         android:text="@string/area_of_expertise_result" />
 
     <TextView
-        android:id="@+id/textViewPhone"
+        android:id="@+id/textViewPhoneNumber2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/phone_number_result" />
